welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:16: error: Invalid literal number
for(i<-1to3) {
       ^PictureMono2:20: error: ')' expected but '}' found.
}
^